# snspd-wizard

./: .gitignore  README.md  main.py  plotter.py  pyproject.toml  run_normalize_instruments.py  test.html
lab_wizard/: .gitignore  __init__.py  build_yaml.py  custom_setup.yaml  demo_dummy_client.py  pyproject.toml
lab_wizard/config/instruments/: keysight53220A.yml  prologix_gpib.yml  prologix_gpib_key_~2Fdev~2FttyUSB0.yml
lab_wizard/config/instruments/dbay/: dbay.yml  dbay_key_10~2E7~2E0~2E88.yml
lab_wizard/config/instruments/sim900/: sim900.yml  sim900_key_5.yml
lab_wizard/lib/: __init__.py
lab_wizard/lib/instruments/: agilentN7764A.py  dummy_volt.py  keysight53220A.py  thorLabsPM100D.py
lab_wizard/lib/instruments/dbay/: comm.py  dbay.py
lab_wizard/lib/instruments/general/: broker.py  comm.py  computer.py  dummy_dep.py  gpib.py  http_dep.py  parent_child.py  parent_helpers.py  prologix_gpib.py  serial.py  visa.py  vsource.py
lab_wizard/lib/instruments/sim900/: comm.py  deps.py  sim900.py
lab_wizard/lib/measurements/general/: genericMeasurement.py
lab_wizard/lib/measurements/mcr_curve/: mcr_curve.py  mcr_curve_setup_template.py
lab_wizard/lib/measurements/pcr_curve/: pcr_curve_setup_template.py
lab_wizard/lib/plotters/: plotter.py
lab_wizard/lib/savers/: __init__.py
lab_wizard/lib/utilities/: codec.py  config_io.py  model_tree.py  params_discovery.py  plotter.py
lab_wizard/tests/: test_intellisense.py
lab_wizard/wizard/: __init__.py  cli.py  dev.sh  run_broker.py  wizard.py
lab_wizard/wizard/backend/: get_measurements.py  location.py  main.py  models.py
lab_wizard/wizard/frontend/: build.ts  svelte.config.js  vite.config.ts
snspd_measure/: .gitignore  build_yaml.py  demo_dummy_client.py  pyproject.toml  setup_measurement.py  wizard.py
snspd_measure/config/instruments/: sim900.yml
snspd_measure/lib/instruments/: agilentN7764A.py  andoAQ8201A.py  keysight53220A.py  sim900.py  thorLabsPM100D.py
snspd_measure/lib/instruments/dbay/: __init__.py  comm.py  dbay.py  http.py  state.py
snspd_measure/lib/instruments/general/: broker.py  child.py  counter.py  genericMainframe.py  genericSense.py  genericSource.py  gpib.py  mainframe.py  (+10 more)
snspd_measure/lib/plotters/: __init__.py  genericPlotter.py
snspd_measure/lib/savers/: genericSaver.py  saver.py
snspd_measure/lib/utilities/: model_spec.py  model_tree.py  yaml_class.py
snspd_measure/tests/: conftest.py  test_chaining.py  test_channels.py  test_computer_chain.py  test_intellisense.py
snspd_measure/wizard/: build_ui_and_run.sh  run.sh  run_broker.py  wizard.py
snspd_measure/wizard/backend/: get_measurements.py  main.py  models.py  utils_runtime.py
snspd_measure/wizard/frontend/: package.json  svelte.config.js  vite.config.ts
(+89 files in other folders)
