[project]
name = "snspd-measure-new"
version = "0.1.0"
description = "Rewritten SNSPD measurement library"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "pyvisa",
    "pyserial",
    "h5py",
    "pyyaml",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "pydantic-yaml",
    "ruamel-yaml>=0.18.14",
    "pytest>=8.4.1",
]

[tool.uv.sources]
pydantic-yaml = { git = "https://github.com/NowanIlfideme/pydantic-yaml", rev = "main" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["instruments*", "measurements*", "utilities*"]
